<resources>
    <string name="app_name">TerraViva</string>
    <string name="comments_hint">Comments (optional)</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="planting_date_text">Planting date</string>
    <string name="longitude_hint">Longitude</string>
    <string name="latitude_hint">Latitude</string>
    <string name="minimum_humidity_hint">Minimum humidity</string>
    <string name="maximum_humidity_hint">Maximum humidity</string>
    <string name="minimum_temperature_hint">Minimum temperature</string>
    <string name="maximum_temperature_hint">Maximum temperature</string>
    <string name="fruit_text">Fruit</string>
    <string name="vegetable_text">Vegetable</string>
    <string name="cereal_text">Cereal</string>
    <string name="crop_name_hint">Crop name</string>
    <string name="crop_type_text">crop type</string>
    <string name="crop_temperatures_text">Min°C / Max°C</string>
    <string name="crop_humidities_text">Min% / Max%</string>
    <string name="current_temperature_title">Current temperature:</string>
    <string name="current_humidity_title">Current humidity:</string>
    <string name="planting_date_title">Planted on: </string>
    <string name="crop_address_title">Address: </string>
    <string name="crop_type_title">Type:</string>
    <string name="crop_temperatures_title">Temperature:</string>
    <string name="crop_humidities_title">"Humidity: "</string>
    <string name="planting_date_value">DD/MM/YYYY</string>
    <string name="crop_address_value">----</string>
    <string name="temperature_alerts">Temperature Alerts</string>
    <string name="temperature_alerts_description">Alerts when the temperature is out of the desired range</string>

    <string name="humidity_alerts">Humidity Alerts</string>
    <string name="humidity_alerts_description">Alerts when the humidity is out of range</string>

    <string name="general_alerts">Current Conditions</string>

    <string name="high_temp_alert">%1$s: Current temperature %2$.1f°C exceeds the allowed maximum %3$.1f°C.</string>
    <string name="low_temp_alert">%1$s: Current temperature %2$.1f°C is below the allowed minimum %3$.1f°C.</string>

    <string name="high_humidity_alert">%1$s: Current humidity %2$.1f%% exceeds the allowed maximum %3$.1f%%.</string>
    <string name="low_humidity_alert">%1$s: Current humidity %2$.1f%% is below the allowed minimum %3$.1f%%.</string>

    <string name="temperature_alert_title">Temperature Alert</string>
    <string name="humidity_alert_title">Humidity Alert</string>
    <string name="current_conditions_title">Current Conditions</string>

    <string name="current_conditions">%1$s: %2$.1f°C (%3$.1f - %4$.1f°C), %5$.1f%%H (%6$.1f - %7$.1f%%)</string>
    <string name="date_choice_text">Plantation Date</string>
</resources>