<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ManageCropActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Primera columna -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="10dp">

                <EditText
                    android:id="@+id/editTxtCropName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crop_name_hint"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:padding="5dp" />

                <RadioGroup
                    android:id="@+id/rdGroupCropType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdBtnCereal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cereal_text" />

                    <RadioButton
                        android:id="@+id/rdBtnVegetable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegetable_text" />

                    <RadioButton
                        android:id="@+id/rdBtnFruit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fruit_text" />

                </RadioGroup>

                <EditText
                    android:id="@+id/editTxtMaxTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/maximum_temperature_hint"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/editTxtMinTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/minimum_temperature_hint"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:padding="5dp" />

            </LinearLayout>

            <!-- Segunda columna -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <EditText
                    android:id="@+id/editTxtMaxHum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/maximum_humidity_hint"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/editTxtMinHum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/minimum_humidity_hint"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/editTxtLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/latitude_hint"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/editTxtLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/longitude_hint"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:padding="5dp" />

            </LinearLayout>
        </LinearLayout>

        <!-- Campos adicionales -->
        <EditText
            android:id="@+id/editTxtDateChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_choice_text"
            android:textColor="@color/black"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/editTxtComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comments_hint"
            android:textColor="@color/black"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_marginBottom="10dp" />

        <!-- Botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/save_text"
                android:layout_marginEnd="5dp" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                android:layout_marginStart="5dp" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
