<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp">

    <ImageView
        android:id="@+id/img_item"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtViewCropName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/crop_name_hint"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingRight="5dp"
                android:text="@string/crop_type_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtViewCropType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="end"
                android:text="@string/crop_type_text"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingRight="5dp"
                android:text="@string/crop_temperatures_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtViewCropTemperatures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="end"
                android:text="@string/crop_temperatures_text"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingRight="5dp"
                android:text="@string/crop_humidities_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtViewCropHumidities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="end"
                android:text="@string/crop_humidities_text"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingRight="5dp"
                android:text="@string/planting_date_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtViewCropPlantingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="end"
                android:text="@string/planting_date_value"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingRight="5dp"
                android:text="@string/crop_address_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txtViewCropAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="end"
                android:text="@string/crop_address_value"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>